# rust-glances

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
src/: app.rs  cli.rs  main.rs  types.rs  utils.rs  web.rs
src/frontend/: index.html
src/metrics/: docker.rs  gpu.rs  mod.rs  ports.rs  power.rs  system.rs
src/ui/: alerts.rs  dialogs.rs  docker.rs  footer.rs  gpu.rs  graphs.rs  header.rs  http_dialog.rs  layout.rs  logs_dialog.rs  mod.rs  ports.rs  processes.rs  system.rs  tabs.rs  temps.rs
