[package]
name = "glances"
version = "0.5.2"
edition = "2021"
description = "A modern Glances-inspired TUI system monitor written in Rust — CPU, memory, GPU, Docker, network, disk, battery, alerts, and container API testing"
license = "MIT"
repository = "https://github.com/jcadic/rust-glances"
keywords = ["monitoring", "system", "tui", "gpu", "docker"]
categories = ["command-line-utilities", "development-tools::profiling"]

[[bin]]
name = "glances"
path = "src/main.rs"

[features]
default = ["gpu", "docker"]
full = ["gpu", "docker", "web"]
minimal = []
gpu = ["dep:nvml-wrapper", "dep:metal", "dep:core-foundation", "dep:objc2"]
docker = ["dep:bollard", "dep:futures-util", "dep:futures-core", "dep:reqwest"]
web = ["dep:axum", "dep:tower-http"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# System metrics
sysinfo = "0.32"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = "0.4"

# Human-readable formatting
humansize = "2"

# Ordered map for disk grouping
indexmap = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config file
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Battery monitoring
battery = "0.7"

# HTTP client for container API testing (requires docker feature)
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

# Web frontend (optional)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# Docker monitoring (optional)
bollard = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }

# NVIDIA GPU support (Linux/Windows, optional)
[target.'cfg(not(target_os = "macos"))'.dependencies]
nvml-wrapper = { version = "0.10", optional = true }

# Metal GPU support (macOS, optional)
[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.31", optional = true }
core-foundation = { version = "0.10", optional = true }
objc2 = { version = "0.6", optional = true }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
